--- a/src/components/List.sass
+++ b/src/components/List.sass
@@ -1,10 +1,9 @@
 $checkbox-width: 18px
 $dist-checkbox-text: 10px
-$color-light-grey: #bcbcbc
-$color-dark-grey: #aaa
-$color-blue: #4550c9
 
 input[type='text']
+    color: var(--theme-text-color)
+    background-color: transparent
     border-style: none
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
     -webkit-font-smoothing: antialiased
@@ -13,17 +12,17 @@ input[type='text']
         outline: none
 
 ul
+    align-self: flex-start
     display: block
-    margin: 10vh auto 0
-    padding: 50px 60px
-    background-color: white
+    margin: 0 auto
+    padding: 60px 50px
     min-height: 40vh
-    border: 1px solid #eee
+    border: 1px solid var(--theme-border-color)
     list-style: none
     text-align: left
     font-size: 17px
     line-height: 36px
-    width: 30%
+    width: var(--list-width-pc)
     text-align: left
 
     .list-info
@@ -35,11 +34,11 @@ ul
         hyphens: auto
     .list-title
         margin-bottom: 10px
-        font-size: 28px       
+        font-size: 28px
     .list-description
         margin-bottom: 30px
-        font-size: 17px  
-        color: #888
+        font-size: 17px
+        color: var(--theme-description-color)
 
     li
         .checkbox-container
@@ -49,65 +48,40 @@ ul
             justify-content: space-between
             border: 1px solid transparent
 
-            .icon                
+            .icon
                 margin: 0 10px
-
+                padding: 0 10px
+                color: var(--theme-icon-color)
+                &:hover
+                    color: var(--theme-icon-hover-color)
             .icon-lines
                 cursor: all-scroll
                 width: 20px
-                color: #e5e5e5
-                &:hover
-                    color: $color-light-grey
-
             .icon-delete
-                color: $color-light-grey
                 margin-left: auto
                 padding-right: 20px
                 cursor: pointer
-                &:hover
-                    color: $color-dark-grey
 
             &:hover
                 background-color: #aaaaaa20
 
         .dragged-over
-            border-top: 1px solid $color-blue
-            border-bottom: 1px solid $color-blue
+            border-top: 1px solid var(--theme-color)
+            border-bottom: 1px solid var(--theme-color)
 
         .new-item input[type='text'], .edit-item input[type='text']
-            margin-left: 40px + $checkbox-width + $dist-checkbox-text
-            width: 70%
+            margin-left: 50px + $checkbox-width + $dist-checkbox-text
+            width: 75%
             font-size: 17px
 
         .new-item input[type='text']
-            border-bottom: 2px solid $color-blue
+            border-bottom: 2px solid var(--theme-color)
             margin-top: 20px
 
         .edit-item input[type='text']
-            border-bottom: 1px solid $color-light-grey
-
-@media screen and ( max-width: 1024px)
-    ul
-        width: 70%
-        margin: 10vh auto
-
-@media screen and ( max-width: 480px)
-    ul
-        width: 80%
-        padding: 40px 10px
-        margin: 10vh auto
-
-        li .new-item input[type='text'], li .edit-item input[type='text']
-            width: 60%
+            border-bottom: 1px solid var(--theme-border-color)
 
 .checkbox
-    .item-name
-        min-height: 26px
-        max-width: 100%
-        overflow-wrap: break-word
-        word-wrap: break-word
-        hyphens: auto
-
     input[type='checkbox']
         display: none
 
@@ -115,42 +89,74 @@ ul
         position: relative
         display: inline-block
         padding-left: $checkbox-width + $dist-checkbox-text
-        max-width: 60%
         cursor: text
-
         &::before, &::after
             position: absolute
             content: ""
             display: inline-block
-
         &::before
             text-align: center
             top: 9px
             left: 0px
             height: 18px
             width: 18px
-            border: 1px solid $color-dark-grey
+            border: 1px solid var(--theme-checkbox-color)
             cursor: pointer
-
         &::after
             left: 4px
             top: 9px + 4px
             height: 9px - 3px
             width: 9px + 1px
-            border-left: 2px solid $color-blue
-            border-bottom: 2px solid $color-blue
+            border-left: 2px solid var(--theme-color)
+            border-bottom: 2px solid var(--theme-color)
             transform: rotate(-45deg)
+
+        .item-name
+            color: var(--theme-text-color)
+            width: var(--todo-width-pc)
+            min-height: 26px
+            overflow-wrap: break-word
+            word-wrap: break-word
+            hyphens: auto
 
     label:hover::before
         // box-shadow: 0px 0px 2px 1px rgba($color-blue, 0.25) inset
-        border: 1px solid $color-blue
+        border: 1px solid var(--theme-color)
 
     input[type="checkbox"] + label::after
         content: none
 
     input[type="checkbox"]:checked + label
         text-decoration: line-through
-        color: $color-dark-grey
+        color: var(--theme-text-color)
+        opacity: 70%
 
     input[type="checkbox"]:checked + label::after
         content: ""
+
+@media screen and ( max-width: 1024px)
+    ul
+        width: var(--list-width-tablet)
+        padding: 40px 10px
+        margin: 0 auto
+
+        li .new-item input[type='text'], li .edit-item input[type='text']
+            margin-left: 30px + $checkbox-width + $dist-checkbox-text
+            font-size: 16px
+            width: 70%
+
+    .checkbox label .item-name
+        width: var(--todo-width-tablet)
+
+@media screen and ( max-width: 480px)
+    ul
+        width: var(--list-width-mobile)
+        padding: 30px 10px
+        margin: 0 auto
+
+        li .new-item input[type='text'], li .edit-item input[type='text']
+            margin-left: 30px + $checkbox-width + $dist-checkbox-text
+
+    .checkbox label .item-name
+        width: var(--todo-width-mobile)
+        font-size: 16px
